aks/agic/helm/multi_access_multi_appgw_multi_ns/helm/ingress/ingress-private.yaml
---
# Ingress for Private AppGW
# Hub VNet の VM (オンプレ想定) からアクセスされる
# host: private.internal
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-private-ingress
  namespace: app-private
  annotations:
    # agic-private が監視する ingressClass 値。
    # agic-private は watchNamespace: "app-private" で本 Namespace のみ監視する。
    kubernetes.io/ingress.class: azure/application-gateway-private
    appgw.ingress.kubernetes.io/use-private-ip: "true"
spec:
  rules:
    - host: private.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoserver-svc
                port:
                  number: 80
